# vacuum-meter-bt

./: CMakeLists.txt  README.md  vacuum-meter-bt.cpp  vacuum-meter-bt.h  vacuum-meter.cpp  vacuum-meter.h
libs/: CMakeLists.txt
libs/Bounce2/: Bounce2.cpp  Bounce2.h  CMakeLists.txt
libs/Encoder/: CMakeLists.txt  Encoder.h
libs/EncoderButton/: CMakeLists.txt  EncoderButton.cpp  EncoderButton.h
libs/bt/: CMakeLists.txt  background.cpp  common.cpp  common.h  gatt_streamer_server.c  gatt_streamer_server.cpp  gatt_streamer_server.gatt  manufacturer_data.h
libs/bt/config/: btstack_config.h  device_information_service.gatt  gatt_streamer_server.gatt
libs/common/: CMakeLists.txt  Print.cpp  Print.h  WString.h
libs/lcd_i2c/: CMakeLists.txt  LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h  custom_chars.h
